--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
+  dio: ^4.0.4
+  intl: ^0.17.0
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
